# mlx-whisper

./: README.md  com.mlx-whisper.wyoming.plist  com.mlx.whisper.stt.plist  config.yaml  install_service.sh  pyproject.toml  run_server.sh  server.py  start_server.sh  test_client.py  test_server.py  uninstall_service.sh
